✨feat#22: add patch document API
